--- a/lkdcourses/templates/base.html
+++ b/lkdcourses/templates/base.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>LKD Kurs Yazılımı</title>
+    <meta charset="utf-8">
+    <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+<a href="/">Ana sayfa</a> |
 {% if user.is_authenticated %}
     {{ user.username }} | <a href="{% url 'django.contrib.auth.views.logout_then_login' %}">Çıkış</a>
 {% else %}
-    <a href="{% url 'django.contrib.auth.views.login' %}">Giriş</a>
+    <a href="{% url 'django.contrib.auth.views.login' %}">Giriş</a> | <a href="{% url 'courses:register' %}">Kayıt ol</a>
 {% endif %}
 <hr>
 {% block content %}
