--- a/lkdcourses/templates/registration/login.html
+++ b/lkdcourses/templates/registration/login.html
@@ -3,24 +3,24 @@
 {% block content %}
 
 {% if form.errors %}
-<p>Your username and password didn't match. Please try again.</p>
+<p>Kullanıcı adınız veya parolanız geçersiz. Lütfen tekrar deneyin.</p>
 {% endif %}
 
 <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
 {% csrf_token %}
 <table>
 <tr>
-    <td>{{ form.username.label_tag }}</td>
+    <td>Kullanıcı adı:</td>
     <td>{{ form.username }}</td>
 </tr>
 <tr>
-    <td>{{ form.password.label_tag }}</td>
+    <td>Parola:</td>
     <td>{{ form.password }}</td>
 </tr>
 </table>
 
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
+<input type="submit" value="Giriş yap">
+<input type="hidden" name="next" value="{{ next }}">
 </form>
 
 {% endblock %}
