--- a/lkdcourses/templates/base.html
+++ b/lkdcourses/templates/base.html
@@ -7,11 +7,18 @@
 <body>
 <a href="/">Ana sayfa</a> |
 {% if user.is_authenticated %}
-    {{ user.username }} | <a href="{% url 'django.contrib.auth.views.logout_then_login' %}">Çıkış</a>
+    {{ user.username }} |
+    <a href="{% url 'courses:profile_edit' %}">Profilim</a> |
+    <a href="{% url 'django.contrib.auth.views.logout_then_login' %}">Çıkış</a>
 {% else %}
     <a href="{% url 'django.contrib.auth.views.login' %}">Giriş</a> | <a href="{% url 'courses:register' %}">Kayıt ol</a>
 {% endif %}
 <hr>
+{% if messages %}
+    {% for message in messages %}
+    <p{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+    {% endfor %}
+{% endif %}
 {% block content %}
 {% endblock %}
 </body>
