* Split courses app into multiple apps. (events, courses, profiles) * Add new django migrations. * Store user profile info within the default user model on django.contrib.auth (AbstractUser)

--- a/lkdcourses/templates/base.html
+++ b/lkdcourses/templates/base.html
@@ -8,11 +8,11 @@
 <a href="/">Ana sayfa</a> |
 {% if user.is_authenticated %}
     {{ user.username }} |
-    <a href="{% url 'courses:profile_edit' %}">Profilim</a> |
+    <a href="{% url 'profiles:profile_edit' %}">Profilim</a> |
     <a href="{% url 'django.contrib.auth.views.logout_then_login' %}">Çıkış</a>
 {% else %}
     <a href="{% url 'django.contrib.auth.views.login' %}">Giriş</a> |
-    <a href="{% url 'courses:register' %}">Kayıt ol</a> |
+    <a href="{% url 'users:register' %}">Kayıt ol</a> |
     <a href="{% url 'password_reset' %}">Parola sıfırla</a>
 {% endif %}
 <hr>
