--- a/lkdcourses/templates/registration/register.html
+++ b/lkdcourses/templates/registration/register.html
@@ -3,7 +3,7 @@
 {% block title %}Kayıt ol{% endblock %}
 
 {% block content %}
-    <form action="{% url 'courses:register' %}" method="post">
+    <form action="{% url 'profiles:register' %}" method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Kayıt ol">
