Add initial Python 3 support.
Also, make some cosmetic changes.

Fixes #31

--- a/lkdcourses/static/screen.css
+++ b/lkdcourses/static/screen.css
@@ -70,7 +70,7 @@ form > .form-footer {
 
 footer {
   background-color: #c7d1c2;
-  margin-top: 25px;
+  margin-top: 3rem;
 }
 
 footer a, footer p {
