--- a/lkdcourses/templates/base.html
+++ b/lkdcourses/templates/base.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="{{ STATIC_URL }}primer.css">
+  <link rel="stylesheet" href="{{ STATIC_URL }}primer.min.css">
   <link rel="stylesheet" href="{{ STATIC_URL }}screen.css">
 </head>
 <body>
